--- a/Makefile.vars.template
+++ b/Makefile.vars.template
@@ -4,7 +4,7 @@
 #
 # Part of ceur-make (https://github.com/clange/ceur-make/)
 # 
-# © Christoph Lange 2012
+# © Christoph Lange 2012–2013
 #
 # Licensed under GPLv3 or any later version
 
