--- a/Makefile.vars.template
+++ b/Makefile.vars.template
@@ -2,9 +2,9 @@
 #
 # Please copy to Makefile.vars and adapt
 #
-# Part of ceur-make (https://github.com/clange/ceur-make/)
+# Part of ceur-make (https://github.com/ceurws/ceur-make/)
 # 
-# © Christoph Lange 2012–2013
+# © Christoph Lange and contributors 2012–2015
 #
 # Licensed under GPLv3 or any later version
 
