makes initial raw docker image available

--- a/docker/build
+++ b/docker/build
@@ -1,4 +1,4 @@
 #!/bin/bash
 # 2020-10-21 WF
-# docker build script
-docker build . -t ceur-ws/ceur-make:v0.1 .
+# build ceur-make  docker image
+docker build -t ceur-ws/ceur-make:v0.1 .
