--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,8 +8,8 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -q && apt-get install -qy \
     texlive-full \
     python-pygments gnuplot \
-    make git \
-    && rm -rf /var/lib/apt/lists/*
+    make git rcs vim
+
 
 WORKDIR /usr/local/src
 RUN git clone https://github.com/ceurws/ceur-make
